--- a/public_html/week1/demo/conditions.html
+++ b/public_html/week1/demo/conditions.html
@@ -17,6 +17,11 @@
                 console.log('condition is false');
             }
 
+            if(one === two){
+                
+                console.log('condition is true');
+            }
+
 
             let myArray = [
                 "Bananas",
