--- a/public_html/week1/lab1/Functions.html
+++ b/public_html/week1/lab1/Functions.html
@@ -1,26 +1,27 @@
 <!Doctype HTML>
 <html>
-<head>
-<title>Lab1 | JavaScript</title>
-<meta charset="UTF-8">
-  <meta name="description" content="Lab1">
-  <meta name="keywords" content="JavaScript, New England Institute of Technology">
-  <meta name="author" content="John Doe">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
- <script>
-function add(number)
-            {
-                number=number+1
-                return number
-            }
-            
-          let numberResult= add(200) 
-          console.log(numberResult)
+    <head>
+        <title>Lab1 | JavaScript</title>
+        <meta charset="UTF-8">
+        <meta name="description" content="Lab1">
+        <meta name="keywords" content="JavaScript, New England Institute of Technology">
+        <meta name="author" content="John Doe">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-</script>
-  
-</head>
-<body>
-</body>
+        <script>
+
+            function add(number1, number2)
+            {
+                let sum = number1 + number2;
+                return sum;
+            }
+
+            let numberResult = add(200, 120)
+            console.log('200+120=', numberResult)
+
+        </script>
+
+    </head>
+    <body>
+    </body>
 </html>
